--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   bloc: ^8.1.2
   flutter_bloc: ^8.1.3
   dio: ^5.4.0
+  flutter_screenutil: ^5.9.0
 
 dev_dependencies:
   flutter_test:
