--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_bloc: ^8.1.3
   dio: ^5.4.0
   flutter_screenutil: ^5.9.0
+  fluttertoast: ^8.2.4
 
 dev_dependencies:
   flutter_test:
